--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <!doctype html>
 <head>
-  <title>Page title</title>
+  <title>Emma Pearon's Homepage</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 
-<h1>Page title goes here</h1>
+<h1>Emma Pearson's Homepage</h1>
 
 <div id="contact">
+<img src="C:\Users\pirat\Desktop\Memes\15894592_10207614727859558_2141488988650059319_n.jpg" alt="photo of me"/ style="width:128px;height:128px;"/>
 <h2>Contact info</h2>
 <ul>
-  <li><strong>Phone:</strong> 555-867-5309</li>
-  <li><strong>E-mail:</strong> example@example.org</li>
-  <li><strong>Website:</strong> http://www.example.org</li>
+  <li><strong>Work Phone:</strong> 612-301-1741</li>
+  <li><strong>Cell Phone:</strong> 763-486-5164</li>
+  <li><strong>E-mail:</strong> pears877@umn.edu</li>
+  <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/emma-pearson-274891130/">z.umn.edu/emma</a></li>
 </ul>
 </div>
 
-<h2>Section 1</h2>
+<h2>About Me</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar mi magna. Aliquam sodales felis odio, eget ultrices lorem rutrum vel. Proin eget lorem nec tellus auctor maximus ut non nunc. Vestibulum pharetra nec tortor tempus sodales. Cras nec nibh eros. Fusce quis ex at felis venenatis imperdiet ut non enim. Vestibulum quis elit eget dolor maximus blandit. Etiam ac ullamcorper est. Ut tempus nibh sit amet augue suscipit suscipit. Duis at venenatis purus, ac egestas tortor. Quisque pretium orci sit amet magna iaculis, vel varius ante tincidunt. Maecenas at velit nec sapien facilisis lacinia. Nulla non molestie est. Vestibulum ut mi lacus. Vestibulum at nisl feugiat, efficitur ex ac, ultrices metus. </p>
+<p>Hello! My name is Emma. I was born and raised on a chicken farm in Buffalo, MN. I participated in various clubs throughout high school such as choir, choral ensemble, theater, French club, and Anime club. I attended my Freshman year at MSU Mankato studying engineering, and transferred to the University of Minnesota to study Technical Writing my sophomore year. I currently live with my friends and my cat Dr. Doot in Minneapolis. I enjoy cooking vegan food, travelling, and dancing in my spare time.</p>
 
-<p> Vivamus cursus dolor urna. Integer rhoncus ac augue condimentum placerat. Vivamus sed tristique enim. Nulla pretium mattis justo vel ornare. Donec sit amet egestas massa. Suspendisse consectetur sapien ex, a interdum urna pretium vel. Ut quis feugiat ante. Donec porttitor enim quam, in faucibus lectus imperdiet vitae. Ut metus nunc, tincidunt nec metus sit amet, sodales luctus velit. Nullam sollicitudin non nisl ac mollis. Sed a nunc et tortor posuere sodales laoreet ut odio. Sed sit amet ex malesuada, fermentum risus eget, suscipit erat. Fusce interdum purus gravida dictum maximus. Nunc quis egestas risus. Fusce fermentum, sapien vitae iaculis iaculis, velit odio rhoncus lorem, in tempus velit nunc sit amet augue. Sed ut mi libero.</p>
+<h2>Education</h2>
 
-<h2>Section 2</h2>
+<p>I am a senior at the University of Minnesota studying for a B.S. in Technical Writing and Communication with a subtract in Information Technology and Design. My coursework has been focused on rhetoric, editing, and writing development. WRIT 4662W is my first experience with coding and I am excited to get started!</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at iaculis dolor. Nam vestibulum vehicula tincidunt. Vestibulum quis felis magna. Ut a nunc sit amet metus suscipit posuere a nec nibh. Cras ut vehicula nisi, at vulputate lacus. Aenean tristique leo id diam hendrerit, ut cursus turpis venenatis. Morbi auctor imperdiet congue. Donec ac sem ullamcorper, tempor lacus accumsan, sodales augue. Donec quis varius neque. Pellentesque non ornare urna. Vivamus lacinia ex odio, sit amet gravida tellus porta consequat. Vivamus fringilla, lorem sit amet aliquam dapibus, ipsum est sodales velit, vitae interdum nibh odio eget sem.</p>
+<h2>Work Experience</h2>
 
-<p>Aliquam volutpat est ut arcu sagittis tristique. Mauris non porta risus. Praesent volutpat eu metus in placerat. Nullam justo urna, aliquet eu pulvinar id, porttitor eu turpis. Vestibulum interdum urna at turpis cursus bibendum. Aliquam vitae lectus magna. Quisque et posuere mauris. Vestibulum id luctus ipsum, sit amet placerat erat. Donec sodales iaculis ligula sit amet sollicitudin. Suspendisse placerat venenatis ex ac vestibulum. In vestibulum ipsum velit, id aliquet orci dictum non. Proin ullamcorper at lorem et consequat. Nam augue nisi, varius ac velit eu, suscipit lacinia diam. </p>
-
-<h2>Section 3</h2>
-
-<p>Aenean elit odio, tempor sed elementum in, consequat vel mi. Vivamus non sagittis nulla. Vivamus sem massa, tempor vitae orci id, tempor imperdiet nisl. Suspendisse rutrum, arcu at lobortis consectetur, purus magna interdum massa, vel sodales massa libero sit amet augue. Morbi non condimentum ipsum. Praesent maximus lacus nec nulla vulputate, sed efficitur nisl suscipit. Suspendisse accumsan cursus magna, eget porttitor arcu varius eu.</p>
+<p>I work as a Student Lead for the IT service desk at the University of Minnesota. At this position I provide Technical Support to users, leadership to my fellow student workers, and create and edit knowledge articles for public and internal use. In this role I have developed a deep passion for user support and usability that I will carry into future careers.</p>
 
 </body>
 </html>
