--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Emma Pearson's Homepage</h1>
 
 <div id="contact">
+<img src="https://i.imgur.com/iCS2k5w.jpg" alt="Photo of me" style="width:42px;height:42px;border:5;">
 <h2>Contact info</h2>
 <ul>
   <li><strong>Work Phone:</strong> 612-301-1741</li>
@@ -28,7 +29,7 @@
 
 <h2>Work Experience</h2>
 
-<p>I work as a Student Lead for the IT service desk at the University of Minnesota. At this position I provide Technical Support to users, leadership to my fellow student workers, and create and edit knowledge articles for public and internal use. In this role I have developed a deep passion for user support and usability that I will carry into future careers.</p>
+<p>I work as a Student Lead for the IT Service Desk at the University of Minnesota. At this position I provide Technical Support to users, leadership to my fellow student workers, and create and edit knowledge articles for public and internal use. In this role I have developed a deep passion for user support and usability that I will carry into future careers.</p>
 
 </body>
 </html>
