Adding buttons test

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 
 <h1>Emma Pearson's Homepage</h1>
 
-<div id="contact">
-<img src="https://i.imgur.com/iCS2k5w.jpg" alt="Photo of me" style="width:300px;height:300px;border:5;">
-<h2>Contact info</h2>
-<ul>
-  <li><strong>Work Phone:</strong> 612-301-1741</li>
-  <li><strong>Cell Phone:</strong> 763-486-5164</li>
-  <li><strong>E-mail:</strong> pears877@umn.edu</li>
-  <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/emma-pearson-274891130/">z.umn.edu/emma</a></li>
-</ul>
+<div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
 </div>
 
 <h2>About Me</h2>
