--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <head>
-  <title>Emma Pearon's Homepage</title>
+  <title>Technology Help Resources</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 
-<h1>Emma Pearson's Homepage</h1>
+<h1>Technology Help Internal Resources</h1>
 
 <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
@@ -17,17 +17,9 @@
   </div>
 </div>
 
-<h2>About Me</h2>
+<h2>Service Desk Updates</h2>
 
-<p>Hello! My name is Emma. I was born and raised on a chicken farm in Buffalo, MN. I participated in various clubs throughout high school such as choir, choral ensemble, theater, French club, and Anime club. I attended my Freshman year at MSU Mankato studying engineering, and transferred to the University of Minnesota to study Technical Writing my sophomore year. I currently live with my friends and my cat Dr. Doot in Minneapolis. I enjoy cooking vegan food, travelling, and dancing in my spare time.</p>
-
-<h2>Education</h2>
-
-<p>I am a senior at the University of Minnesota studying for a B.S. in Technical Writing and Communication with a subtract in Information Technology and Design. My coursework has been focused on rhetoric, editing, and writing development. WRIT 4662W is my first experience with coding and I am excited to get started!</p>
-
-<h2>Work Experience</h2>
-
-<p>I work as a Student Lead for the IT Service Desk at the University of Minnesota. At this position I provide Technical Support to users, leadership to my fellow student workers, and create and edit knowledge articles for public and internal use. In this role I have developed a deep passion for user support and usability that I will carry into future careers.</p>
+<p>Updates of important information at the service desk.</p>
 
 </body>
 </html>
