--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 <style>
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #800000;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -53,15 +53,41 @@
 </head>
 <body>
 
-<h2>Hoverable Dropdown</h2>
-<p>Move the mouse over the button to open the dropdown menu.</p>
-
 <div class="dropdown">
   <button class="dropbtn">External Resources</button>
   <div class="dropdown-content">
-    <a href="#">My-Account</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">Account Manager</a>
+    <a href="#">Voicemail Manager</a>
+    <a href="#">Ticketing System</a>
+    <a href="#">Classroom Services</a>
+    <a href="#">Passwords</a>
+  </div>
+</div>
+<div class="dropdown">
+  <button class="dropbtn">Common Knowledge Articles</button>
+  <div class="dropdown-content">
+    <a href="#">Basic Browser Troubleshooting</a>
+    <a href="#">Wifi and Wired Network</a>
+    <a href="#">Voicemail</a>
+    <a href="#">Accounts and Email</a>
+    <a href="#">Password Reset Rules</a>
+    <a href="#">Parent/Guest Access</a>
+  </div>
+</div>
+<div class="dropdown">
+  <button class="dropbtn">Employee Resources</button>
+  <div class="dropdown-content">
+    <a href="#">WhenToWork</a>
+    <a href="#">Timecard</a>
+    <a href="#">Paystub</a>
+  </div>
+</div>
+<div class="dropdown">
+  <button class="dropbtn">Contact Information</button>
+  <div class="dropdown-content">
+    <a href="#">OIT Staff Numbers</a>
+    <a href="#">Non-OIT Staff Numbers</a>
+    <a href="#">Master Departmental Support Spreadsheet</a>
   </div>
 </div>
 
