--- a/index.html
+++ b/index.html
@@ -8,54 +8,11 @@
 
 <h1>Technology Help Internal Resources</h1>
 
-<head>
-<style>
-.dropbtn {
-    background-color: #800000;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
-</style>
-</head>
 <body>
 
-<div class="dropdown">
-  <button class="dropbtn">External Resources</button>
-  <div class="dropdown-content">
+<div id="dropdown">
+  <button id="dropbtn">External Resources</button>
+  <div id="dropdown-content">
     <a href="#">Account Manager</a>
     <a href="#">Voicemail Manager</a>
     <a href="#">Ticketing System</a>
@@ -63,9 +20,9 @@
     <a href="#">Passwords</a>
   </div>
 </div>
-<div class="dropdown">
-  <button class="dropbtn">Common Knowledge Articles</button>
-  <div class="dropdown-content">
+<div id="dropdown">
+  <button id="dropbtn">Common Knowledge Articles</button>
+  <div id="dropdown-content">
     <a href="#">Basic Browser Troubleshooting</a>
     <a href="#">Wifi and Wired Network</a>
     <a href="#">Voicemail</a>
@@ -74,17 +31,17 @@
     <a href="#">Parent/Guest Access</a>
   </div>
 </div>
-<div class="dropdown">
-  <button class="dropbtn">Employee Resources</button>
-  <div class="dropdown-content">
+<div id="dropdown">
+  <button id="dropbtn">Employee Resources</button>
+  <div id="dropdown-content">
     <a href="#">WhenToWork</a>
     <a href="#">Timecard</a>
     <a href="#">Paystub</a>
   </div>
 </div>
-<div class="dropdown">
-  <button class="dropbtn">Contact Information</button>
-  <div class="dropdown-content">
+<div id="dropdown">
+  <button id="dropbtn">Contact Information</button>
+  <div id="dropdown-content">
     <a href="#">OIT Staff Numbers</a>
     <a href="#">Non-OIT Staff Numbers</a>
     <a href="#">Master Departmental Support Spreadsheet</a>
