--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-<div id="dropdown">
-  <button id="dropbtn">External Resources</button>
-  <div id="dropdown-content">
+<div href="styles.css" id="dropdown">
+  <button href="styles.css" id="dropbtn">External Resources</button>
+  <div href="styles.css" id="dropdown-content">
     <a href="#">Account Manager</a>
     <a href="#">Voicemail Manager</a>
     <a href="#">Ticketing System</a>
