--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <div href="styles.css" id="dropdown">
   <button href="styles.css" id="dropbtn">External Resources</button>
   <div href="styles.css" id="dropdown-content">
-    <a href="#">Account Manager</a>
-    <a href="#">Voicemail Manager</a>
-    <a href="#">Ticketing System</a>
-    <a href="#">Classroom Services</a>
-    <a href="#">Passwords</a>
+    <a href="styles.css">Account Manager</a>
+    <a href="styles.css">Voicemail Manager</a>
+    <a href="styles.css">Ticketing System</a>
+    <a href="styles.css">Classroom Services</a>
+    <a href="styles.css">Passwords</a>
   </div>
 </div>
 <div id="dropdown">
