playing around with buttons

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div class="dropdown">
   <button class="dropbtn">Please work</button>
   <div class="dropdown-content">
-    <a href="#">Link 1</a>
+    <a href="#">Thing 1</a>
     <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">Bit 3</a>
   </div>
 </div>
 
