--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
 <h1>Technology Help Internal Resources</h1>
 
 <div class="dropdown">
-  <button class="dropbtn">Please work</button>
+  <button class="dropbtn">Common KB Articles</button>
   <div class="dropdown-content">
-    <a href="#">Thing 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Bit 3</a>
+    <a href="#">Basic Browser Troubleshooting</a>
+    <a href="#">Password Reset Rules</a>
+    <a href="#">Accounts and Email</a>
+    <a href="#">Wifi and Wired Connection</a>
+    <a href="#">Voicemail</a>
+    <a href="#">MyU</a>
+  </div>
+</div>
+<div class="dropdown">
+  <button class="dropbtn">External Resources</button>
+  <div class="dropdown-content">
+    <a href="#">Ticketing System</a>
+    <a href="#">Account Manager</a>
+    <a href="#">Voicemail Portal</a>
+    <a href="#">Voice and Data Jack Manager</a>
+    <a href="#">Ticketing System</a>
+    <a href="#">AHC Active Directory</a>
+  </div>
+</div>
+<div class="dropdown">
+  <button class="dropbtn">Passwords</button>
+  <div class="dropdown-content">
+    <a href="#">Skype Account</a>
+    <a href="#">Door Codes</a>
+    <a href="#">Voicemail Admin Account</a>
   </div>
 </div>
 
