editing and adding buttons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 <body>
 
-<h1>Technology Help Internal Resources</h1>
-
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Minnesota_Golden_Gophers_logo.svg/1280px-Minnesota_Golden_Gophers_logo.svg.png" alt="University of Minnesota logo" style="width:280px;height:150px;">
+<h1>Technology Help Student Internal Resources</h1>
+<h2>External Resources<h2>
 <div class="dropdown">
   <button class="dropbtn">Common KB Articles</button>
   <div class="dropdown-content">
@@ -20,7 +21,7 @@
   </div>
 </div>
 <div class="dropdown">
-  <button class="dropbtn">External Resources</button>
+  <button class="dropbtn">External Pages</button>
   <div class="dropdown-content">
     <a href="#">Ticketing System</a>
     <a href="#">Account Manager</a>
@@ -36,6 +37,15 @@
     <a href="#">Skype Account</a>
     <a href="#">Door Codes</a>
     <a href="#">Voicemail Admin Account</a>
+  </div>
+</div>
+<div class="dropdown">
+  <button class="dropbtn">Employee Resources</button>
+  <div class="dropdown-content">
+    <a href="#">WhenToWork</a>
+    <a href="#">Timecard</a>
+    <a href="#">Paystubs</a>
+    <a href="#">Email</a>
   </div>
 </div>
 
