--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Minnesota_Golden_Gophers_logo.svg/1280px-Minnesota_Golden_Gophers_logo.svg.png" alt="University of Minnesota logo" style="width:280px;height:150px;">
 <h1>Technology Help Student Internal Resources</h1>
-<h2>External Resources<h2>
+<h2>External Resources</h2>
 <div class="dropdown">
   <button class="dropbtn">Common KB Articles</button>
   <div class="dropdown-content">
@@ -27,7 +27,6 @@
     <a href="#">Account Manager</a>
     <a href="#">Voicemail Portal</a>
     <a href="#">Voice and Data Jack Manager</a>
-    <a href="#">Ticketing System</a>
     <a href="#">AHC Active Directory</a>
   </div>
 </div>
@@ -51,7 +50,16 @@
 
 <h2>Service Desk Updates</h2>
 
-<p>Updates of important information at the service desk.</p>
+<h4>1/1/2017 MyU/Peoplesoft Outage:</h4>
+<p>All issues should be resolved and everything in MyU/PeopleSoft should be functioning as normal.
+Some people need to clear cache/cookies if they accessed MyU on 9/26 and did not restart their browser
+Please create incidents for any "Error 500 - Internal Server Error" messages and escalate to MyU support
+This is most likely to occur when someone has two tabs/sessions of MyU open. To prevent this from happening, will need to work in only one tab/session
+Cause of the issue was a hardware failure
+</p>
+
+<h4>New Wifi Portal</h4>
+<p>Users can now use the online NGN portal to register their non-computer devices to authenticate the UofM Guest network: https://it.umn.edu/register-personal-device-wifi-access</p>
 
 </body>
 </html>
