--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Minnesota_Golden_Gophers_logo.svg/1280px-Minnesota_Golden_Gophers_logo.svg.png" alt="University of Minnesota logo" style="width:180px;height:50px;">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Minnesota_Golden_Gophers_logo.svg/1280px-Minnesota_Golden_Gophers_logo.svg.png" alt="University of Minnesota logo" style="width:180px;height:100px;">
 <h1>Technology Help Student Internal Resources</h1>
 <h2>External Resources</h2>
 <div class="dropdown">
@@ -23,11 +23,11 @@
 <div class="dropdown">
   <button class="dropbtn">External Pages</button>
   <div class="dropdown-content">
-    <a href="#">Ticketing System</a>
-    <a href="#">Account Manager</a>
-    <a href="#">Voicemail Portal</a>
-    <a href="#">Voice and Data Jack Manager</a>
-    <a href="#">AHC Active Directory</a>
+    <a href="https://umnprd.service-now.com/">Ticketing System</a>
+    <a href="https://my-account.umn.edu/self-service">Account Manager</a>
+    <a href="https://as1.voice.umn.edu/Login/">Voicemail Portal</a>
+    <a href="https://go4service.umn.edu/">Voice and Data Jack Manager</a>
+    <a href="https://adia.ahc.umn.edu">AHC Active Directory</a>
   </div>
 </div>
 <div class="dropdown">
@@ -41,10 +41,11 @@
 <div class="dropdown">
   <button class="dropbtn">Employee Resources</button>
   <div class="dropdown-content">
-    <a href="#">WhenToWork</a>
-    <a href="#">Timecard</a>
-    <a href="#">Paystubs</a>
-    <a href="#">Email</a>
+    <a href="http://whentowork.com/">WhenToWork</a>
+    <a href="https://hipchat.umn.edu/home">Hipchat</a>
+    <a href="https://www.myu.umn.edu/psp/psprd/EMPLOYEE/EMPL/h/?tab=DEFAULT#/tab_UM_ESS_MY_TIME">Timecard</a>
+    <a href="https://www.myu.umn.edu/psp/psprd/EMPLOYEE/EMPL/h/?tab=DEFAULT#/tab_UM_ESS_MY_PAY">Paystubs</a>
+    <a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
   </div>
 </div>
 
@@ -59,7 +60,10 @@ Cause of the issue was a hardware failure
 </p>
 
 <h4>New Wifi Portal</h4>
-<p>Users can now use the online NGN portal to register their non-computer devices to authenticate the UofM Guest network: https://it.umn.edu/register-personal-device-wifi-access</p>
+<p>Users can now use the online NGN portal to register their non-computer devices to authenticate the UofM Guest network: <a ref="https://it.umn.edu/register-personal-device-wifi-access">Register Personal Device for Wifi</a></p>
+
+<h4>Housing and Residential Life Questions</h4>
+<p>There is a good FAQ for Housing and Residential Life Questions that can be found <a ref="https://drive.google.com/file/d/0B1YS-k9iLcnMZ05hMHVRSFVLWXc/view">here</a>.  It includes setting up the Internet in your dorm, connecting to eduroam, HBO login, and Fix it - repair requests.</p>
 
 </body>
 </html>
