--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <div class="dropdown">
   <button class="dropbtn">External Pages</button>
   <div class="dropdown-content">
-    <a href="https://umnprd.service-now.com/">Ticketing System</a>
-    <a href="https://my-account.umn.edu/self-service">Account Manager</a>
-    <a href="https://as1.voice.umn.edu/Login/">Voicemail Portal</a>
-    <a href="https://go4service.umn.edu/">Voice and Data Jack Manager</a>
-    <a href="https://adia.ahc.umn.edu">AHC Active Directory</a>
+    <a href="https://umnprd.service-now.com/" target="_blank">Ticketing System</a>
+    <a href="https://my-account.umn.edu/self-service" target="_blank">Account Manager</a>
+    <a href="https://as1.voice.umn.edu/Login/" target="_blank">Voicemail Portal</a>
+    <a href="https://go4service.umn.edu/" target="_blank">Voice and Data Jack Manager</a>
+    <a href="https://adia.ahc.umn.edu" target="_blank">AHC Active Directory</a>
   </div>
 </div>
 <div class="dropdown">
@@ -41,13 +41,36 @@
 <div class="dropdown">
   <button class="dropbtn">Employee Resources</button>
   <div class="dropdown-content">
-    <a href="http://whentowork.com/">WhenToWork</a>
-    <a href="https://hipchat.umn.edu/home">Hipchat</a>
-    <a href="https://www.myu.umn.edu/psp/psprd/EMPLOYEE/EMPL/h/?tab=DEFAULT#/tab_UM_ESS_MY_TIME">Timecard</a>
-    <a href="https://www.myu.umn.edu/psp/psprd/EMPLOYEE/EMPL/h/?tab=DEFAULT#/tab_UM_ESS_MY_PAY">Paystubs</a>
-    <a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
+    <a href="http://whentowork.com/" target="_blank">WhenToWork</a>
+    <a href="https://hipchat.umn.edu/home" target="_blank">Hipchat</a>
+    <a href="https://www.myu.umn.edu/psp/psprd/EMPLOYEE/EMPL/h/?tab=DEFAULT#/tab_UM_ESS_MY_TIME" target="_blank">Timecard</a>
+    <a href="https://www.myu.umn.edu/psp/psprd/EMPLOYEE/EMPL/h/?tab=DEFAULT#/tab_UM_ESS_MY_PAY" target="_blank">Paystubs</a>
+    <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Email</a>
   </div>
 </div>
+
+<table id="z-links" style="width:50%">
+  <tr>
+    <th>Link</th>
+    <th>Purpose</th>
+  </tr>
+  <tr>
+    <td>z.umn.edu/domainchangerequest</td>
+    <td>Campus Email Domain Change Request</td>
+  </tr>
+  <tr>
+    <td>z.umn.edu/sponsor</td>
+    <td>Sponsored Account Request</td>
+  </tr>
+  <tr>
+    <td>z.umn.edu/departmental</td>
+    <td>Departmental Account Request</td>
+  </tr>
+  <tr>
+    <td>z.umn.edu/googleappsexceptionrequest</td>
+    <td>Move from BAA to BAA+</td>
+  </tr>
+</table>
 
 <h2>Service Desk Updates</h2>
 
