Adjusting MyU info - adjusting table style

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 </div>
 
-<table id="z-links" style="width:50%">
+<table id="z-links">
   <tr>
     <th>Link</th>
     <th>Purpose</th>
@@ -75,12 +75,12 @@
 <h2>Service Desk Updates</h2>
 
 <h4>1/1/2017 MyU/Peoplesoft Outage:</h4>
-<p>All issues should be resolved and everything in MyU/PeopleSoft should be functioning as normal.
-Some people need to clear cache/cookies if they accessed MyU on 9/26 and did not restart their browser
-Please create incidents for any "Error 500 - Internal Server Error" messages and escalate to MyU support
-This is most likely to occur when someone has two tabs/sessions of MyU open. To prevent this from happening, will need to work in only one tab/session
-Cause of the issue was a hardware failure
-</p>
+<ul>
+<li>All issues should be resolved and everything in MyU/PeopleSoft should be functioning as normal.</li>
+<li>Some people need to clear cache/cookies if they accessed MyU on 9/26 and did not restart their browser</li>
+<li>Please create incidents for any "Error 500 - Internal Server Error" messages and escalate to MyU support.</li>
+<li>Cause of the issue was a hardware failure.</li>
+</ul>
 
 <h4>New Wifi Portal</h4>
 <p>Users can now use the online NGN portal to register their non-computer devices to authenticate the UofM Guest network: <a ref="https://it.umn.edu/register-personal-device-wifi-access">Register Personal Device for Wifi</a></p>
