--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Minnesota_Golden_Gophers_logo.svg/1280px-Minnesota_Golden_Gophers_logo.svg.png" alt="University of Minnesota logo" style="width:180px;height:100px;">
 <h1>Technology Help Student Internal Resources</h1>
-<h2>External Resources</h2>
 <div class="dropdown">
   <button class="dropbtn">Common KB Articles</button>
   <div class="dropdown-content">
@@ -65,9 +64,10 @@
 <h4>Housing and Residential Life Questions</h4>
 <p>There is a good FAQ for Housing and Residential Life Questions that can be found <a ref="https://drive.google.com/file/d/0B1YS-k9iLcnMZ05hMHVRSFVLWXc/view">here</a>.  It includes setting up the Internet in your dorm, connecting to eduroam, HBO login, and Fix it - repair requests.</p>
 
+<h2>Z-Links</h2>
 <table>
   <tr>
-    <th>Z-Link</th>
+    <th>Link</th>
     <th>Purpose</th>
   </tr>
   <tr>
