draft for peer review

--- a/index.html
+++ b/index.html
@@ -48,47 +48,50 @@
   </div>
 </div>
 
-<div>
-<table>
-  <tr>
-    <th>Link</th>
-    <th>Purpose</th>
-  </tr>
-  <tr>
-    <td>z.umn.edu/domainchangerequest</td>
-    <td>Campus Email Domain Change Request</td>
-  </tr>
-  <tr>
-    <td>z.umn.edu/sponsor</td>
-    <td>Sponsored Account Request</td>
-  </tr>
-  <tr>
-    <td>z.umn.edu/departmental</td>
-    <td>Departmental Account Request</td>
-  </tr>
-  <tr>
-    <td>z.umn.edu/googleappsexceptionrequest</td>
-    <td>Move from BAA to BAA+</td>
-  </tr>
-</table>
-</div>
+<div id="outer-div">
+  <div id="table-div">
+    <h2>Z-Links</h2>
+    <table>
+      <tr>
+        <th>Link</th>
+        <th>Purpose</th>
+      </tr>
+      <tr>
+        <td>z.umn.edu/domainchangerequest</td>
+        <td>Campus Email Domain Change Request</td>
+      </tr>
+      <tr>
+        <td>z.umn.edu/sponsor</td>
+        <td>Sponsored Account Request</td>
+      </tr>
+      <tr>
+        <td>z.umn.edu/departmental</td>
+        <td>Departmental Account Request</td>
+      </tr>
+      <tr>
+        <td>z.umn.edu/googleappsexceptionrequest</td>
+        <td>Move from BAA to BAA+</td>
+      </tr>
+    </table>
+    </div>
 
-<div>
-<h2>Service Desk Updates</h2>
+  <div id="text-div">
+  <h2>Service Desk Updates</h2>
 
-<h4>1/1/2017 MyU/Peoplesoft Outage:</h4>
-<ul>
-<li>All issues should be resolved and everything in MyU/PeopleSoft should be functioning as normal.</li>
-<li>Some people need to clear cache/cookies if they accessed MyU on 9/26 and did not restart their browser</li>
-<li>Please create incidents for any "Error 500 - Internal Server Error" messages and escalate to MyU support.</li>
-<li>Cause of the issue was a hardware failure.</li>
-</ul>
+  <h4>1/1/2017 MyU/Peoplesoft Outage:</h4>
+  <ul>
+  <li>All issues should be resolved and everything in MyU/PeopleSoft should be functioning as normal.</li>
+  <li>Some people need to clear cache/cookies if they accessed MyU on 9/26 and did not restart their browser</li>
+  <li>Please create incidents for any "Error 500 - Internal Server Error" messages and escalate to MyU support.</li>
+  <li>Cause of the issue was a hardware failure.</li>
+  </ul>
 
-<h4>New Wifi Portal</h4>
-<p>Users can now use the online NGN portal to register their non-computer devices to authenticate the UofM Guest network: <a ref="https://it.umn.edu/register-personal-device-wifi-access">Register Personal Device for Wifi</a></p>
+  <h4>New Wifi Portal</h4>
+  <p>Users can now use the online NGN portal to register their non-computer devices to authenticate the UofM Guest network: <a ref="https://it.umn.edu/register-personal-device-wifi-access">Register Personal Device for Wifi</a></p>
 
-<h4>Housing and Residential Life Questions</h4>
-<p>There is a good FAQ for Housing and Residential Life Questions that can be found <a ref="https://drive.google.com/file/d/0B1YS-k9iLcnMZ05hMHVRSFVLWXc/view">here</a>.  It includes setting up the Internet in your dorm, connecting to eduroam, HBO login, and Fix it - repair requests.</p>
+  <h4>Housing and Residential Life Questions</h4>
+  <p>There is a good FAQ for Housing and Residential Life Questions that can be found <a ref="https://drive.google.com/file/d/0B1YS-k9iLcnMZ05hMHVRSFVLWXc/view">here</a>.  It includes setting up the Internet in your dorm, connecting to eduroam, HBO login, and Fix it - repair requests.</p>
+  </div>
 </div>
 
 </body>
